--- a/porath-triangulation-with-delaunay-flipping.htm
+++ b/porath-triangulation-with-delaunay-flipping.htm
@@ -10,7 +10,7 @@
     <body>
         <!-- Setup the JavaScript canvas to draw the points and triangles -->
         <canvas id="Canvas" style="width: 100%; height: 100%; border: 0px"> </canvas>
-        <script src="Delaunay Triangulation & Flipping\Delaunay-Triangulations-Flipping.js"></script>
+        <script src="Delaunay-Triangulations-Flipping.js"></script>
         <script>
             // Setup the canvas drawing context
             var canvas = document.getElementById("Canvas");
